[package]
description = "Simple rust HashMap with transient entries."
homepage = "https://github.com/debris/transient-hashmap"
license = "MIT"
name = "transient-hashmap"
version = "0.4.1"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["hashmap", "transient", "temporary", "lru", "cache"]
